plugins {
    id "java"
    id "idea"
    id 'application'
    id 'org.jetbrains.gradle.plugin.idea-ext' version '1.1.9'
}
repositories {
    maven{ url 'https://maven.aliyun.com/repository/public'}
    maven{ url 'https://maven.aliyun.com/repository/google'}
    maven{ url 'https://maven.cleanroommc.com' }
    maven{ url "https://repo.gradle.org/gradle/libs-releases-local/"}
    maven { url 'https://jitpack.io' }
    flatDir { dirs 'lib' }
    mavenCentral()
}

project.ext.mcreatorconf = new Properties()
file('src/main/resources/mcreator.conf').withInputStream { project.mcreatorconf.load(it) }

group = 'rip.sayori.rmcr'
version = project.mcreatorconf.getProperty('mcreator')
javadoc.source = sourceSets.main.allJava
compileJava.options.encoding = 'UTF-8'
compileJava.options.debug
tasks.withType(JavaCompile).configureEach { options.encoding = 'UTF-8' }

java.toolchain.languageVersion = JavaLanguageVersion.of(21)
java.toolchain.vendor = JvmVendorSpec.AMAZON

idea {
    module {
        inheritOutputDirs = true
        excludeDirs = [file(".gradle"), file(".idea"), file(".github"), file("build"),
                       file("gradle"), file("jdk"), file("license"), file("logs")] as Set<File>
    }
}

dependencies {
    // from lib folder
    implementation fileTree(dir: 'lib', include: ['*.jar'])

    // from maven
    implementation group: 'commons-io', name: 'commons-io', version: '2.17.0'
    // 2.7+ problem with : in filenames: NTFS ADS separator
    implementation group: 'foxtrot', name: 'foxtrot-core', version: '4.0'
    implementation group: 'org.freemarker', name: 'freemarker', version: '2.3.31'
    implementation group: 'com.google.code.gson', name: 'gson', version: '2.8.9'
    implementation group: 'com.github.sps.junidecode', name: 'junidecode', version: '0.3'
    implementation group: 'org.jboss.forge.roaster', name: 'roaster-api', version: '2.22.2.Final'
    implementation group: 'org.jboss.forge.roaster', name: 'roaster-jdt', version: '2.22.2.Final'
    implementation group: 'com.esotericsoftware.yamlbeans', name: 'yamlbeans', version: '1.17'
    implementation group: 'com.fifesoft', name: 'rsyntaxtextarea', version: '3.5.3'
    implementation group: 'com.fifesoft', name: 'autocomplete', version: '3.3.1'
    implementation(group: 'com.fifesoft', name: 'languagesupport', version: '3.3.0') { dep ->
        dep.exclude group: 'org.mozilla', module: 'rhino'
    }
    implementation group: 'org.reflections', name: 'reflections', version: '0.9.9' // https://github.com/ronmamo/reflections/issues/81
    implementation group: 'de.javagl', name: 'obj', version: '0.3.0'
    implementation group: 'org.apache.logging.log4j', name: 'log4j-core', version: '2.24.1'
    implementation group: 'org.apache.commons', name: 'commons-text', version: '1.10.0'
    implementation group: 'org.eclipse.jgit', name: 'org.eclipse.jgit', version: '7.0.0.202409031743-r'
    implementation group: 'org.slf4j', name: 'slf4j-nop', version: '1.7.30'
    implementation group: 'org.gradle', name: 'gradle-tooling-api', version: '7.1.1'
    implementation group: 'net.java.balloontip', name: 'balloontip', version: '1.2.4.1'

    implementation group: 'com.atlassian.commonmark', name: 'commonmark', version: '0.16.1'
    implementation group: 'com.atlassian.commonmark', name: 'commonmark-ext-autolink', version: '0.16.1'
    implementation group: 'com.atlassian.commonmark', name: 'commonmark-ext-gfm-tables', version: '0.16.1'

    implementation 'zone.rong:imaginebreaker:2.1'

    implementation(project(":javafx")){
        exclude(group: "org.openjfx")
    }
    // for annotations
    compileOnly group: 'org.jetbrains', name: 'annotations', version: '26.0.1'
}

application {
    mainClass = "rip.sayori.rmcr.Launcher"
}

